// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifGrid.js /> Debe mostrarse correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    One Punch
  </h3>
  <p
    className="animate__animated animate__flash"
  >
     Cargando..
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas en <GifGrid.js /> deben mostrarse los items cuando se cargan las imagenes en UseFetchGifs  1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    One Punch
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquier cosa"
      url="http://cualquiercosa.com"
    />
  </div>
</Fragment>
`;
